hard-gists/1440754/run.log
=== Docker Run Log for 1440754 ===
Started at: Mi 29. Okt 12:14:10 CET 2025

[2025-10-29 12:14:10] START: Running container for 1440754
[2025-10-29 12:14:11] SUCCESS: Container 7d08d1bf039286239ec5f6bcd5c62cac18725c01df17836f04d9a78e187c07e4 started for 1440754
=== Container logs for 1440754 ===
  File "/snippet.py", line 38
    print git_issue.title
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1440754 ===
[2025-10-29 12:14:13] INFO: Container 7d08d1bf039286239ec5f6bcd5c62cac18725c01df17836f04d9a78e187c07e4 has stopped
